FAQ: Minor edits & formatting (#339)
* Update last paragraph

* Update ToC

* Formatting

* Formatting & re-word

* Link to question above

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -41,7 +41,6 @@ changes so that you can continue building under sustainable conditions.
 - [Can grants be part-time or only full-time?](#can-grants-be-part-time-or-only-full-time)
 - [Can a full-time grant be turned into a part-time grant?](#can-a-full-time-grant-be-turned-into-a-part-time-grant)
 - [What should I do at the end of my grant?](#what-should-i-do-at-the-end-of-my-grant)
-- [I have general praise or criticism regarding OpenSats. What should I do?](#i-have-general-praise-or-criticism-regarding-opensats-what-should-i-do)
 
 ### I have a question; whom should I email?
 
@@ -95,7 +94,10 @@ That’s basically it![^fn-legal]
 Every grantee must submit a progress report every 90 days. A markdown template
 is provided when we request your first report.
 
-If your grant started in March, for example, the 1st report will be due anytime during the month of June and should cover the work done from March through May, and so on and so forth. You have a 30-day window to submit the report and we appreciate if you submit them on time.
+If your grant started in March, for example, the 1st report will be due anytime
+during the month of June and should cover the work done from March through May,
+and so on and so forth. You have a 30-day window to submit the report and we
+appreciate if you submit them on time.
 
 Reports are evaluated by:
 
@@ -108,11 +110,18 @@ evaluate progress.
 
 ### What does an ideal progress report look like?
 
+An ideal progress report is:
+
 - Written in Markdown format
 - Between 1 and 3 pages
-- Enriched with the most relevant links to pull requests, commits, and other work produced.
-- Has a brief summary in each section before providing additional details (links, PRs, etc).
-- Tells us if you are on track, if you had challenges, how you (will) overcome the challenges, if you are pleased or displeased with the progress.
+- Enriched with the most relevant links to pull requests, commits, and other work produced
+
+In the best case, each progress report:
+
+- Has a brief summary in each section before providing additional details
+- Tells us if you are on track
+- Describes challenges, and how you overcame them
+- Includes if you are pleased or displeased with the progress you made
 
 Every progress report should show clearly the connection between what was
 planned in the application or previous report(s) and the work done since.
@@ -123,8 +132,17 @@ outlined plans changed. Remember that we're here to help, not to judge.
 
 ### What does a poor progress report look like?
 
-- A long wall of text talking about the work but not showing any of the work through relevant links to pull requests and commits.
-- Dives directly and only into a long list of links to pull requests and commits without some contextualization of the work done in those links.
+A poor progress report is:
+
+- Hard to read
+- Hard to understand
+- An incredibly long wall of text
+- Not showing any of the actual work done
+- Missing links to pull requests and commits
+- Missing context, summaries, and explanations, i.e. is only a long list of links to pull requests and commits without anything else
+
+Refer to the question above for what a [good progress
+report](#what-does-an-ideal-progress-report-look-like) looks like.
 
 ### Does OpenSats provide feedback on every progress report submitted?
 
@@ -214,14 +232,18 @@ smaller time commitment.
 
 Send in your final progress report.
 
-### I have general praise or criticism regarding OpenSats. What should I do?
+---
+
+We hope the above is helpful. Make sure to have a look at our [General
+FAQ](/faq) too, as well as our [application](/apply#criteria) and [selection
+criteria](/selection).
 
 If you have something good to say about us, feel free to say it publicly and tag
 us [on nostr][njump].
 
-If you have something that irks you or any suggestions for improvements, please
-let us know via support@opensats.org. We are learning as we go, so any feedback
-is highly appreciated.
+If you have constructive criticism or suggestions for improvements, please let
+us know via support@opensats.org. We are learning as we go, so any feedback is
+highly appreciated.
 
 Thank you!
 
