--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -21,7 +21,7 @@ required. This reduces the on-chain transactions required and improves the
 usability of the Lightning Network.
 
 With LTS support from OpenSats, Dusty will help extend the Splicing
-implementation across additional Lightning implementations and commence building
+implementation across the Lightning ecosystem and commence building
 [Splice Script](https://www.youtube.com/live/nXbjP2TSajE?t=849s). This new
 toolset will provide a straightforward mechanism for users and application
 developers to utilize Splicing in more complex ways. The expected outcomes
