Grantee requested edit via @btcschellingpt

--- a/data/blog/dusty-daemon-receives-lts-grant.mdx
+++ b/data/blog/dusty-daemon-receives-lts-grant.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/57-dusty-daemon-lts-grant.jpg']
 summary: "OpenSats welcomes Dusty Daemon as an LTS Grantee."
 ---
 
-OpenSats is excited to announce long-term support for the main driving force
+OpenSats is excited to announce long-term support for the creator
 behind Splicing on the Lightning Network, [Dusty
 Daemon](https://github.com/ddustin). Dusty has contributed significantly to the
 Lightning Network [specifications](https://github.com/lightning/bolts/pull/863)
