--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -65,8 +65,8 @@ The best way to [contact us](/contact) is via email:
 You can also write to us at:
 
     Open Sats Initiative, Inc.  
-    12436 FM 1960 Rd West PMB #1003  
-    Houston, TX 77065  
+    42041 Cypress Parkway #4-207  
+    Punta Gorda, FL 33982  
 
 ## How often are funding opportunities announced?
 
