--- a/data/pages/terms.mdx
+++ b/data/pages/terms.mdx
@@ -88,8 +88,8 @@ Some Content in our Site may be acquired from sources that prohibit further use 
 24. [Contact OpenSats](/contact):
 
     Open Sats Initiative, Inc.  
-    12436 FM 1960 Rd West PMB #1003  
-    Houston, TX 77065  
+    42041 Cypress Parkway #4-207  
+    Punta Gorda, FL 33982  
 
     support@opensats.org
 
