--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -7,3 +7,48 @@ authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats Welcomes Greenart7c3 as an LTS Grantee."
 ---
+
+OpenSats is pleased to announce long-term support for
+[Greenart7c3](https://github.com/greenart7c3) for his ongoing contributions to
+the nostr ecosystem.
+
+Greenart7c3 is the creator and lead developer of
+[Citrine](https://github.com/greenart7c3/Citrine), an Android-based nostr relay,
+and [Amber](https://github.com/greenart7c3/Amber), an Android-based nostr signer
+using [NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) to
+enhance private key security practices for users utilizing the same key across
+multiple clients.
+
+Citrine functions as both a local relay and a shared database, allowing users to
+send and receive events while maintaining control of their data offline. Amber
+focuses on enhancing security by keeping sensitive keys in a single, secure app
+that is responsible for remotely signing events on behalf of multiple clients.
+These developments by Greenart7c3 contribute to the broader goal of
+decentralizing and safeguarding user privacy within the nostr ecosystem.
+
+With support from this LTS grant, Greenart7c3 will focus on the continued
+development of Citrine and Amber, with plans including:
+
+- Extending Amber and Citrine to cross-platform usability beyond Android
+  devices.
+
+- Integrating Citrine into [Amethyst](/blog/vitor-pamplona-receives-lts-grant)
+  to enhance its user interface and functionality.
+
+- Testing integrations with web applications such as
+  [Snort](/blog/kieran-receives-lts-grant) and
+  [Coracle](/blog/hodlbod-receives-lts-grant), enabling them to work seamlessly
+  on Android without the need for extensions or web servers.
+
+Our mission at OpenSats is to provide sustainable funding for the builders and
+maintainers of critical open-source infrastructure within the Bitcoin and nostr
+ecosystem.
+
+Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
+made possible by generous donors like you. To continue supporting important
+contributors like [Greenart7c3](https://github.com/greenart7c3), consider
+donating to [The Nostr Fund](/funds/nostr).
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
