Edit Suggestion by Grantee
Co-authored-by: greenart7c3 <115044884+greenart7c3@users.noreply.github.com>

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -38,7 +38,7 @@ development of Citrine and Amber, with plans including:
 - Testing integrations with web applications such as
   [Snort](/blog/kieran-receives-lts-grant) and
   [Coracle](/blog/hodlbod-receives-lts-grant), enabling them to work seamlessly
-  on Android without the need for extensions or web servers.
+  on Android without the need for browser extensions.
 
 Our mission at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin and nostr
