Edit Suggestion by Grantee
Co-authored-by: greenart7c3 <115044884+greenart7c3@users.noreply.github.com>

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -40,6 +40,9 @@ development of Citrine and Amber, with plans including:
   [Coracle](/blog/hodlbod-receives-lts-grant), enabling them to work seamlessly
   on Android without the need for browser extensions.
 
+- Build/Improve new and existing [NIP-55](https://github.com/nostr-protocol/nips/blob/master/55.md) libraries
+  so developers can easily add support for external signers.
+  
 Our mission at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin and nostr
 ecosystem.
