Edit Suggestion by Grantee
Co-authored-by: greenart7c3 <115044884+greenart7c3@users.noreply.github.com>

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -32,8 +32,7 @@ development of Citrine and Amber, with plans including:
 - Extending Amber and Citrine to cross-platform usability beyond Android
   devices.
 
-- Integrating Citrine into [Amethyst](/blog/vitor-pamplona-receives-lts-grant)
-  to enhance its user interface and functionality.
+- Improve the user experience when using Amber and Citrine in [Amethyst](/blog/vitor-pamplona-receives-lts-grant).
 
 - Testing integrations with web applications such as
   [Snort](/blog/kieran-receives-lts-grant) and
