Volunteer Team suggested edits implemented

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -13,18 +13,22 @@ OpenSats is pleased to announce long-term support for
 the nostr ecosystem.
 
 Greenart7c3 is the creator and lead developer of
-[Citrine](https://github.com/greenart7c3/Citrine), an Android-based nostr relay,
-and [Amber](https://github.com/greenart7c3/Amber), an Android-based nostr signer
-using [NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) to
-enhance private key security practices for users utilizing the same key across
-multiple clients.
+[Citrine](https://github.com/greenart7c3/Citrine) and
+[Amber](https://github.com/greenart7c3/Amber).
 
-Citrine functions as both a local relay and a shared database, allowing users to
-send and receive events while maintaining control of their data offline. Amber
-focuses on enhancing security by keeping sensitive keys in a single, secure app
-that is responsible for remotely signing events on behalf of multiple clients.
-These developments by Greenart7c3 contribute to the broader goal of
-decentralizing and safeguarding user privacy within the nostr ecosystem.
+Citrine is an Android-based nostr relay that functions as both a local relay and
+a shared database, allowing users to send and receive events while maintaining
+control of their data offline.
+
+Amber is an Android-based nostr signer using
+[NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) to enhance
+private key security practices for users utilizing the same key across multiple
+clients. It focuses on enhancing security by keeping sensitive keys in a single,
+secure app that is responsible for remotely signing events on behalf of multiple
+clients
+
+These developments contribute to the broader goal of decentralizing and
+safeguarding user privacy within the nostr ecosystem.
 
 With support from this LTS grant, Greenart7c3 will focus on the continued
 development of Citrine and Amber, with plans including:
