--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -52,7 +52,7 @@ ecosystem.
 
 Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
 made possible by generous donors like you. To continue supporting important
-contributors like [Greenart7c3](https://github.com/greenart7c3), consider
+contributors like Greenart7c3, consider
 donating to [The Nostr Fund](/funds/nostr).
 
 <center>
