Style paragraphs, use bullet points, move links

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -10,17 +10,13 @@ summary: "OpenSats Welcomes Greenart7c3 as an LTS Grantee."
 
 OpenSats is pleased to announce long-term support for
 [Greenart7c3](https://github.com/greenart7c3) for his ongoing contributions to
-the nostr ecosystem.
+the nostr ecosystem. Greenart7c3 is the creator and lead developer of Citrine
+and Amber.
 
-Greenart7c3 is the creator and lead developer of
-[Citrine](https://github.com/greenart7c3/Citrine) and
-[Amber](https://github.com/greenart7c3/Amber).
-
-Citrine is an Android-based nostr relay that functions as both a local relay and
+- [Citrine](https://github.com/greenart7c3/Citrine) is an Android-based nostr relay that functions as both a local relay and
 a shared database, allowing users to send and receive events while maintaining
 control of their data offline.
-
-Amber is an Android-based nostr signer using
+- [Amber](https://github.com/greenart7c3/Amber) is an Android-based nostr signer using
 [NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) to enhance
 private key security practices for users utilizing the same key across multiple
 clients. It focuses on enhancing security by keeping sensitive keys in a single,
