Add missing period

--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -21,7 +21,7 @@ control of their data offline.
 private key security practices for users utilizing the same key across multiple
 clients. It focuses on enhancing security by keeping sensitive keys in a single,
 secure app that is responsible for remotely signing events on behalf of multiple
-clients
+clients.
 
 These developments contribute to the broader goal of decentralizing and
 safeguarding user privacy within the nostr ecosystem.
