--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -23,7 +23,7 @@ clients. It focuses on enhancing security by keeping sensitive keys in a single,
 secure app that is responsible for remotely signing events on behalf of multiple
 clients.
 
-These developments contribute to the broader goal of decentralizing and
+Both projects contribute to the broader goal of decentralizing and
 safeguarding user privacy within the nostr ecosystem.
 
 With support from this LTS grant, Greenart7c3 will focus on the continued
