--- a/data/blog/greenart7c3-receives-lts-grant.mdx
+++ b/data/blog/greenart7c3-receives-lts-grant.mdx
@@ -39,7 +39,7 @@ development of Citrine and Amber, with plans including:
   [Coracle](/blog/hodlbod-receives-lts-grant), enabling them to work seamlessly
   on Android without the need for browser extensions.
 
-- Build/Improve new and existing [NIP-55](https://github.com/nostr-protocol/nips/blob/master/55.md) libraries
+- Build new and improve existing [NIP-55](https://github.com/nostr-protocol/nips/blob/master/55.md) libraries
   so developers can easily add support for external signers.
   
 Our mission at OpenSats is to provide sustainable funding for the builders and
