Edit to add em dash's

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -115,8 +115,8 @@ optimal Multi-Path Payments (MPP), reducing payment failures due to liquidity
 shortages, particularly for smaller and less connected nodes in the network.
 
 With the support of this grant, the project will further develop and split the
-payment process into two plugins---"askrene" for route computation and "renepay"
-for payment management---improving modularity and flexibility. Future milestones
+payment process into two plugins—"askrene" for route computation and "renepay"
+for payment management—improving modularity and flexibility. Future milestones
 include adding support for BOLT12 invoices and solving non-linear cost problems
 in payment routing. This ongoing work will enhance the Lightning Network's
 payment layer, offering faster and more reliable payment experiences for users.
