--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -65,7 +65,7 @@ offers flexibility and innovation through features like a swappable API, wallet,
 on-chain data source, and a plugin system similar to Core Lightning. Lampo is
 positioned as a fully open-source alternative to company-driven lightning
 implementations, promoting greater interoperability, customization, and
-experimentation within the Bitcoin and lightning communities.
+experimentation within the Bitcoin and Lightning communities.
 
 With the support of this grant, Lampo will focus on developing key features,
 including a Proof-of-Concept (PoC) for the VLS signer, integration of LDK with
