Remove extra period
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -38,7 +38,7 @@ donating to the General Fund:
 </center>
 
 Let's take a closer look at these projects to discover their purpose, impact,
-and the value they bring to the Bitcoin ecosystem..
+and the value they bring to the Bitcoin ecosystem.
 
 ---
 
