Capitalize "Bitcoin" the network.
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/59-bitcoin-8th-wave.jpg']
-summary: "OpenSats is funding 4 more open-source projects in the bitcoin ecosystem."
+summary: "OpenSats is funding 4 more open-source projects in the Bitcoin ecosystem."
 ---
 
 OpenSats is proud to announce its eighth wave of Bitcoin grants, dedicated to
