Edit for clarity
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -48,7 +48,7 @@ Citadel-Tech is dedicated to advancing privacy within the Bitcoin ecosystem
 through the development of an atomic swap protocol first proposed by Greg
 Maxwell in 2013. By implementing the
 [Maxwell-Belcher](https://gist.github.com/chris-belcher/9144bd57a91c194e332fb5ca371d0964)
-atomic swap protocol, the project enables truly private ownership transfers of
+protocol, the project enables truly private ownership transfers of
 Bitcoin UTXOs between participants. With a focus on providing "passive privacy,"
 even for non-users, this project ensures that swaps are indistinguishable from
 standard Taproot transactions today.
