Edit for clarity
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -68,7 +68,7 @@ implementations, promoting greater interoperability, customization, and
 experimentation within the Bitcoin and Lightning communities.
 
 With the support of this grant, Lampo will focus on developing key features,
-including a Proof-of-Concept (PoC) for the VLS signer, integration of LDK with
+including a proof of concept (PoC) for the VLS signer, integration of LDK with
 LNprototest, and the eventual implementation of BOLT12. The project will
 prioritize bug fixes, improve Lampo's documentation, and introduce new tutorials
 to foster greater accessibility and collaboration. By creating a truly
