--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -72,7 +72,7 @@ including a proof of concept (PoC) for the VLS signer, integration of LDK with
 LNprototest, and the eventual implementation of BOLT12. The project will
 prioritize bug fixes, improve Lampo's documentation, and introduce new tutorials
 to foster greater accessibility and collaboration. By creating a truly
-open-source lightning node, Lampo supports the decentralization of financial
+open-source Lightning node, Lampo supports the decentralization of financial
 infrastructure and drives innovation in lightning technology.
 
 Repository: [vincenzopalazzo/lampo.rs](https://github.com/vincenzopalazzo/lampo.rs)  
