Edit for clarity
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -108,7 +108,7 @@ PickhardtPayments, originally developed by [Rene
 Pickhardt](https://opensats.org/blog/rene-pickhardt-receives-lts-grant) and
 Stefan Richter, is a payment routing strategy aimed at improving the reliability
 and efficiency of payments on the Lightning Network (LN). This plugin project
-focuses on implementing the Pickhardt-Richter model into Core-Lightning via the
+focuses on implementing the Pickhardt-Richter model into Core Lightning via the
 "renepay" plugin. The model uses advanced Bayesian analysis and Minimum Cost
 Flow ([MCF](https://github.com/Lagrang3/mcf-algorithms)) algorithms to calculate
 optimal Multi-Path Payments (MPP), reducing payment failures due to liquidity
