Capitalize yet more "Lightning"

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -59,11 +59,11 @@ License: Apache-2.0 & MIT
 ### Lampo
 
 Lampo is an open-source project that aims to build a modular and customizable
-lightning node implementation for the Bitcoin ecosystem. Designed to integrate
+Lightning node implementation for the Bitcoin ecosystem. Designed to integrate
 with the Lightning Development Kit (LDK) and the LNprototest test suite, Lampo
 offers flexibility and innovation through features like a swappable API, wallet,
 on-chain data source, and a plugin system similar to Core Lightning. Lampo is
-positioned as a fully open-source alternative to company-driven lightning
+positioned as a fully open-source alternative to company-driven Lightning
 implementations, promoting greater interoperability, customization, and
 experimentation within the Bitcoin and Lightning communities.
 
@@ -73,7 +73,7 @@ LNprototest, and the eventual implementation of BOLT12. The project will
 prioritize bug fixes, improve Lampo's documentation, and introduce new tutorials
 to foster greater accessibility and collaboration. By creating a truly
 open-source Lightning node, Lampo supports the decentralization of financial
-infrastructure and drives innovation in lightning technology.
+infrastructure and drives innovation in Lightning technology.
 
 Repository: [vincenzopalazzo/lampo.rs](https://github.com/vincenzopalazzo/lampo.rs)  
 License: BSD 3-Clause
