--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -109,9 +109,9 @@ Pickhardt](https://opensats.org/blog/rene-pickhardt-receives-lts-grant) and
 Stefan Richter, is a payment routing strategy aimed at improving the reliability
 and efficiency of payments on the Lightning Network. This plugin project
 focuses on implementing the Pickhardt-Richter model into Core Lightning via the
-"renepay" plugin. The model uses advanced Bayesian analysis and Minimum Cost
-Flow ([MCF](https://github.com/Lagrang3/mcf-algorithms)) algorithms to calculate
-optimal Multi-Path Payments (MPP), reducing payment failures due to liquidity
+"renepay" plugin. The model uses advanced Bayesian analysis and ([Minimum Cost
+Flow](https://github.com/Lagrang3/mcf-algorithms)) algorithms to calculate
+optimal Multi-Path Payments, reducing payment failures due to liquidity
 shortages, particularly for smaller and less connected nodes in the network.
 
 With the support of this grant, the project will further develop and split the
