Edit to emphasize general fund pass-through

--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -28,10 +28,11 @@ recipients are:
 
 - [PickhardtPayments Plugin](#pickhardtpayments-plugin)
 
-These grants are sourced from our General Fund, sustained by the generosity of
-donors who share our vision for a thriving, decentralized future. If you would
-like to support open-source projects that help Bitcoin flourish, please consider
-donating to the General Fund:
+These grants are sourced from our General Fund, which directly supports
+open-source projects. Sustained by donors who share our vision for a thriving,
+decentralized future, 100% of General Fund donations go to Bitcoin-related
+projects, not operational costs. To support these projects and help Bitcoin
+flourish, please consider donating to the General Fund:
 
 <center>
     <DonateToGeneralFundButton/>
