--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -110,7 +110,7 @@ Pickhardt](https://opensats.org/blog/rene-pickhardt-receives-lts-grant) and
 Stefan Richter, is a payment routing strategy aimed at improving the reliability
 and efficiency of payments on the Lightning Network. This plugin project
 focuses on implementing the Pickhardt-Richter model into Core Lightning via the
-"renepay" plugin. The model uses advanced Bayesian analysis and ([Minimum Cost
+`renepay` plugin. The model uses advanced Bayesian analysis and ([Minimum Cost
 Flow](https://github.com/Lagrang3/mcf-algorithms)) algorithms to calculate
 optimal Multi-Path Payments, reducing payment failures due to liquidity
 shortages, particularly for smaller and less connected nodes in the network.
