--- a/data/blog/8th-wave-of-bitcoin-grants.mdx
+++ b/data/blog/8th-wave-of-bitcoin-grants.mdx
@@ -74,7 +74,7 @@ open-source Lightning node, Lampo supports the decentralization of financial
 infrastructure and drives innovation in Lightning technology.
 
 Repository: [vincenzopalazzo/lampo.rs](https://github.com/vincenzopalazzo/lampo.rs)  
-License: BSD 3-Clause
+License: BSD-3-Clause
 
 ### Cashu Nutshell
 
@@ -120,7 +120,7 @@ in payment routing. This ongoing work will enhance the Lightning Network's
 payment layer, offering faster and more reliable payment experiences for users.
 
 Repository: [Lagrang3/lightning](https://github.com/Lagrang3/lightning)  
-License: BSD 2-Clause & MIT
+License: BSD-MIT
 
 ---
 
