Update canary text

--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -23,26 +23,29 @@ following months:
 * August
 * November
 
-We will include a link to a recent news article [1] in each update to establish
-that the signature was not pre-generated.
+We include the latest Bitcoin block hash in each update to establish that the
+signature was not pre-generated:
+
+* Height: `867367`
+* Block hash: `00000000000000000001092e1ecfd8b04af25d928b02850ca2c7b10bba121a61`
 
 [0] https://opensats.org/transparency
-[1] https://www.nobsbitcoin.com/mutiny-wallet-to-shut-down-at-the-end-of-the-year/
+
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEgZihhTClIqCVYSQ5icSiXmml3n8FAmayEN0ACgkQicSiXmml
-3n/2FQ//bjFGhHSxEN7lur8fQG+mudd0pNfxmWnS5jbWNTugKrquBZyJIAKEYlR7
-Zx/F2Ev8z1aeOrRiot2tc2PqLYLMNUVyRSXocgG2uKY6mk0akoE5IxJLmBQwDP+R
-qM8qOvljeWyvfRPilyaG+sILWj0b+cQyQZsml2ZjWADOQtcKhvsGCXqU4rZB7j8r
-Ho/vR21YFF2k5pGj3kX8qeaWX00CauVqPZ9ElWO1BmwvXYC5OFIdNrr79sGarPON
-pk9/yinXuzrKR8k3EfNxarBXeyTs6DxdCKrOPFV+JCgKlsIwZvXyA87oVbol46qz
-0zkxxA7YTAPhZrDv+85iodby1KcrV3BmzuAhsKUbBdgnmAx/6TFV5scIPWEYTuvm
-cc5uhBROJzzecanCelneUiVbwBkP7lxaKzYTI+FWK64XUYblBHt2bpJzXCoC9aA+
-bp5EMoYqQ2OqjERf0rYgMEbYksl5Zb5Nch3W5wkuCPbrkFHRu56Gcnn4T2Xgtu+y
-0GL0QVJ7NEynDtiKBaWxiOiSYIzlRjRfoy/9SPWyeeJ5i9JwNrU+X4eeTZ+dFkZQ
-N9fYKt+DAS839PT5h1Dwh7/14u+ujg4cNpvqZNvP2Up23h1NzhDrtiiXMTxtps46
-cxTuIaBrGxbWfLgNEIgjkT3IMWqe2ZKRhcbNblyOj7fJQ3qswDc=
-=S4fG
+iQIzBAEBCAAdFiEEgZihhTClIqCVYSQ5icSiXmml3n8FAmccM1AACgkQicSiXmml
+3n+1Zw//QgFJva8BSB26dlZBtBz2dt3w+vcRBiRyeWNIFZkygOUfL/GYX8cNAiAS
+RvDhX/iA5MqoOIrH9/uSLEyEKr1QwjPZMbI9LiTDkhkeRExOBYigL/0gLAwjDnXK
+F73dMnhaylfV/vNikYBdUyaOX3+y27WU3DtYKObbTWCVgcZqdBYF1VcgAoy8QXvT
+xK259w30dq4ZHBn0agi6KGbRgy67n7SSSoYR+e0HccCWXq0ole0nLFOXOIrbI6sN
+TPhexN9OrtYSi0mRKoSNMybw3Q9uvuIbeV1zftFIHmMV8WhztUCHiPPl4aSsYplV
+8PsG+PIuSdF0DCoPGNVMj5ExnbKseOpxUiQ9dybxbzqJghkw5PWiTOeFH02f3tOR
+IMFNYaM5+nQOEEduublOfB/cZm37mVcV3acmemGxgDe24gBW+U7tqLvuksOt0xgN
+rY4wVl2sHSTt9PSGvVbepEvQcM0Geym9EQJ0nJL6Va8VU3pAnXWVVCqWr0TbmeTK
+sVc7PLdQRtHm6LychBxhlNeK9/yfYP4bqHIpfGrRkjNFFlx0IR6BKYu30xvkDzVQ
+cCvxhGbi52yS8mymobONjmgBLIuj1NxMPbNpQyD4hZYogfn4BAvN7b3FNV0mafCZ
+buZcBaNdjBNq3w9pkZaoQNzOfjOoEQB+CNqmEsnIyK1WldBjZEM=
+=nxL6
 -----END PGP SIGNATURE-----
 ```
 
