Update Volunteer Name in Skeleton

--- a/data/authors/ecurrencyhodler.mdx
+++ b/data/authors/ecurrencyhodler.mdx
@@ -1,5 +1,5 @@
 ---
-name: E
+name: Ecurrencyhodler
 nym: ecurrencyhodler
 avatar: /static/images/volunteers/ecurrencyhodler.jpg
 occupation: Volunteer
