--- a/data/authors/ecurrencyhodler.mdx
+++ b/data/authors/ecurrencyhodler.mdx
@@ -10,11 +10,7 @@ github: https://github.com/ecurrencyhodler
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec rhoncus diam.
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-turpis egestas. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Nunc in enim et felis ultricies feugiat at
-consequat ex. Fusce ac condimentum ante. Vivamus a lacus lacus. Maecenas vitae
-neque ante. Duis dignissim massa eros, vitae placerat orci consectetur et.
-Quisque nunc augue, malesuada iaculis feugiat vel, consequat sit amet mauris.
-Nullam scelerisque sagittis est, eu semper sapien.
+Ecurrencyhodler has organized [bitcoin meetups in Los
+Angeles](http://bitdevsla.org/) since 2019 and has served at Bitcoin companies
+such as River, Casa, and Stakwork. He has a background in marketing, client
+services, and product.
