--- a/data/authors/julian.mdx
+++ b/data/authors/julian.mdx
@@ -9,3 +9,12 @@ nostr:
 github: https://github.com/julian2000-code
 volunteer: true
 ---
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec rhoncus diam.
+Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+turpis egestas. Pellentesque habitant morbi tristique senectus et netus et
+malesuada fames ac turpis egestas. Nunc in enim et felis ultricies feugiat at
+consequat ex. Fusce ac condimentum ante. Vivamus a lacus lacus. Maecenas vitae
+neque ante. Duis dignissim massa eros, vitae placerat orci consectetur et.
+Quisque nunc augue, malesuada iaculis feugiat vel, consequat sit amet mauris.
+Nullam scelerisque sagittis est, eu semper sapien.
