Update nym and nostr npub

--- a/data/authors/julian.mdx
+++ b/data/authors/julian.mdx
@@ -1,11 +1,11 @@
 ---
 name: Julian 
-nym: Julian 
+nym: Dynamic 
 avatar: /static/images/volunteers/TODO.jpg
 occupation: Volunteer
 company: OpenSats
 email: julian@opensats.org
-nostr:
+nostr: npub16h5u7amjy5cwdxhru05mmql5cr954a2cpa2klj3685l72qzxm7wsskwy84
 github: https://github.com/julian2000-code
 volunteer: true
 ---
