--- a/data/authors/julian.mdx
+++ b/data/authors/julian.mdx
@@ -10,11 +10,13 @@ github: https://github.com/julian2000-code
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec rhoncus diam.
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-turpis egestas. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Nunc in enim et felis ultricies feugiat at
-consequat ex. Fusce ac condimentum ante. Vivamus a lacus lacus. Maecenas vitae
-neque ante. Duis dignissim massa eros, vitae placerat orci consectetur et.
-Quisque nunc augue, malesuada iaculis feugiat vel, consequat sit amet mauris.
-Nullam scelerisque sagittis est, eu semper sapien.
+Julian's life experiences taught him the value of self-sovereignty. When he
+found Bitcoin, it opened his eyes to how technology can be used to enhance
+privacy and freedom instead of controlling others. Since then, Julian enjoys
+testing different self-sovereign tools, understanding the technical details
+behind how they work, and implementing his favorite tools into his everyday
+life. His professional experience is in marketing and he aims to work for a
+Bitcoin company that aligns with his values.
+
+Julian also enjoys eating healthy, trying out food from different cultures, and
+studying how Bitcoin is merging into the international financial system.
