Edit to lowercase nym

--- a/data/authors/julian.mdx
+++ b/data/authors/julian.mdx
@@ -1,6 +1,6 @@
 ---
 name: Julian 
-nym: Dynamic 
+nym: dynamic 
 avatar: /static/images/volunteers/julian.jpg
 occupation: Volunteer
 company: OpenSats
