--- a/data/authors/julian.mdx
+++ b/data/authors/julian.mdx
@@ -14,7 +14,7 @@ Julian's life experiences taught him the value of self-sovereignty. When he
 found Bitcoin, it opened his eyes to how technology can be used to enhance
 privacy and freedom instead of controlling others. Since then, Julian enjoys
 testing different self-sovereign tools, understanding the technical details
-behind how they work, and implementing his favorite tools into his everyday
+behind how they work, and implementing his favorite tools in his everyday
 life. His professional experience is in marketing and he aims to work for a
 Bitcoin company that aligns with his values.
 
