Edit four -> five

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -18,7 +18,7 @@ developing intuitive user interfaces to enabling robust cross-client
 compatibility, these projects embody the spirit of open-source collaboration,
 making important contributions to the nostr ecosystem.
 
-The four projects in this funding wave are:
+The five projects in this funding wave are:
 
 - [Formstr](#formstr)
 - [Groups](#groups)
