Edit one more four -> five

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -12,7 +12,7 @@ We're excited to announce our latest wave of grants supporting projects that
 advance the nostr ecosystem, empowering developers to push the boundaries of
 privacy, autonomy, and innovative communication.
 
-In this round, we're backing four initiatives focused on enriching user
+In this round, we're backing five initiatives focused on enriching user
 experience and fostering seamless connectivity within the network. From
 developing intuitive user interfaces to enabling robust cross-client
 compatibility, these projects embody the spirit of open-source collaboration,
