--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -83,7 +83,7 @@ License: MIT
 Coop is a messaging client built on nostr, designed for personal and group
 communication with a focus on gamers. It offers a Discord-like experience, while
 also enabling secure and simple communication through features such as group
-chats and, threaded discussions with plans for voice and video calls. It
+chats and threaded discussions with plans for voice and video calls. It
 currently runs on desktop platforms (macOS, Windows, and Linux) using
 [Tauri](https://tauri.app/start/), with a Rust-based rebuild in progress for
 faster performance. Future releases will also include mobile versions for
