--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -23,26 +23,29 @@ following months:
 * August
 * November
 
-We will include a link to a recent news article [1] in each update to establish
-that the signature was not pre-generated.
+We include the latest Bitcoin block hash in each update to establish that the
+signature was not pre-generated:
+
+* Height: `868383`
+* Block hash: `000000000000000000020553c832f80e471dd5905850fa79ef13dc7934b390a4`
 
 [0] https://opensats.org/transparency
-[1] https://www.nobsbitcoin.com/mutiny-wallet-to-shut-down-at-the-end-of-the-year/
+
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEgZihhTClIqCVYSQ5icSiXmml3n8FAmayEN0ACgkQicSiXmml
-3n/2FQ//bjFGhHSxEN7lur8fQG+mudd0pNfxmWnS5jbWNTugKrquBZyJIAKEYlR7
-Zx/F2Ev8z1aeOrRiot2tc2PqLYLMNUVyRSXocgG2uKY6mk0akoE5IxJLmBQwDP+R
-qM8qOvljeWyvfRPilyaG+sILWj0b+cQyQZsml2ZjWADOQtcKhvsGCXqU4rZB7j8r
-Ho/vR21YFF2k5pGj3kX8qeaWX00CauVqPZ9ElWO1BmwvXYC5OFIdNrr79sGarPON
-pk9/yinXuzrKR8k3EfNxarBXeyTs6DxdCKrOPFV+JCgKlsIwZvXyA87oVbol46qz
-0zkxxA7YTAPhZrDv+85iodby1KcrV3BmzuAhsKUbBdgnmAx/6TFV5scIPWEYTuvm
-cc5uhBROJzzecanCelneUiVbwBkP7lxaKzYTI+FWK64XUYblBHt2bpJzXCoC9aA+
-bp5EMoYqQ2OqjERf0rYgMEbYksl5Zb5Nch3W5wkuCPbrkFHRu56Gcnn4T2Xgtu+y
-0GL0QVJ7NEynDtiKBaWxiOiSYIzlRjRfoy/9SPWyeeJ5i9JwNrU+X4eeTZ+dFkZQ
-N9fYKt+DAS839PT5h1Dwh7/14u+ujg4cNpvqZNvP2Up23h1NzhDrtiiXMTxtps46
-cxTuIaBrGxbWfLgNEIgjkT3IMWqe2ZKRhcbNblyOj7fJQ3qswDc=
-=S4fG
+iQIzBAEBCAAdFiEEgZihhTClIqCVYSQ5icSiXmml3n8FAmcklsEACgkQicSiXmml
+3n9JJw//fQHzjzqb/OyOiuv3fhExn4dgmGQR/yHJ2mrAACOIt5/jZxkGGPgtaNHg
+3G2fMkB+PTjmHlc35PfQvfKQfxaHHTrmZZ03uZALihuIp9UIMx8QdnRd0Rjp02YJ
+4INvT9/IwJRev+uAWW8XW8BiCPiGnART2QKxDSth5XcroseEOiri+DF3vMvRtTR9
+Jl77bhNW06+TJmKrftQKfO8UieoVychS5mXEC83sTfOTqnaUfZaQF625siKA19FH
+zBKvRBEim3zLAnYa7gDCBc9Uwt+kChl3jOVODBSR49XFXga7fWC9i4TbRxIOKT46
+mFDVYupRu3+ysTcDvfriMtGGn87ahMGCym28FLpg1irbsPjUFhuyMd11PZ6BQfAQ
+qHtUkWBCvFvQihZl0xcWuZfRXHa+4PlxJm6vSxGwp2ck4BTZOiTKKOOlGA4GJAoh
++0hBfoN5TepmX/JCP9UIVyikzhjGj/qkP7Js4n7Xu0NueSICEguhuZLH2YSuXNK9
+VX1OkjGkekAsUIsht+VbRpJkXO90VAHpVZqTIS3T92XDt3n6VP3quJiNky8ieoDe
+hSMpdOq3T4iydRKGn/pptDX33NMFGqrk7JQGXEdoiV97GNVd35SVpcaDh83Ci/1R
+YLTLsr0ged4BImhl8YvnlLCymzA/jvhzQHkxMmajQPA+Fo4ULhM=
+=b01g
 -----END PGP SIGNATURE-----
 ```
 
@@ -78,6 +81,8 @@ gpg: WARNING: This key is not certified with a trusted signature!
 gpg:          There is no indication that the signature belongs to the owner.
 Primary key fingerprint: 8198 A185 30A5 22A0 9561  2439 89C4 A25E 69A5 DE7F
 ```
+
+Alternatively, you can use the [keybase](https://keybase.io/verify) to verify the signed message.
 
 Stay safe everyone, and keep building.
 
