Audit => Libraries Audit

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -24,7 +24,7 @@ The five projects in this funding wave are:
 - [Groups](#groups)
 - [Coop](#coop)
 - [Nostrability](#nostrability)
-- [NIP-44 Audit](#nip-44-audit)
+- [NIP-44 Libraries Audit](#nip-44-libraries-audit)
 
 Our support for nostr is made possible by the generosity of our donors, with
 contributions helping us support innovative projects like these. If you would
@@ -119,7 +119,7 @@ Repository:
 [nostrability/nostrability](https://github.com/nostrability/nostrability)  
 License: MIT
 
-### NIP-44 Audit
+### NIP-44 Libraries Audit
 
 This project aims to secure nostr's encrypted direct messaging and group chat
 capabilities by auditing the cryptography libraries underlying the new NIP-44
