Add link to NIP-44

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -122,7 +122,7 @@ License: MIT
 ### NIP-44 Libraries Audit
 
 This project aims to secure nostr's encrypted direct messaging and group chat
-capabilities by auditing the cryptography libraries underlying the new NIP-44
+capabilities by auditing the cryptography libraries underlying the new [NIP-44]
 standard. Designed to resolve critical vulnerabilities in the previous NIP-04,
 NIP-44 introduces a robust encryption framework, and this independent audit of
 the Noble-Ciphers JS implementation will ensure its security and resilience.
@@ -131,6 +131,8 @@ This review is a vital step in protecting private communications on nostr.
 Repository:
 [paulmillr/noble-ciphers](https://github.com/paulmillr/noble-ciphers)  
 License: MIT
+
+[NIP-44]: https://github.com/nostr-protocol/nips/blob/master/44.md
 
 ---
 
