--- a/data/authors/ecurrencyhodler.mdx
+++ b/data/authors/ecurrencyhodler.mdx
@@ -1,5 +1,5 @@
 ---
-name: Ecurrencyhodler
+name: E
 nym: ecurrencyhodler
 avatar: /static/images/volunteers/ecurrencyhodler.jpg
 occupation: Volunteer
