--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -3,7 +3,7 @@ title: "Eighth Wave of Nostr Grants"
 date: '2024-11-04'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['arvin', 'ecurrencyhodler', 'julian']
 images: ['/static/images/blog/60-eighth-wave-nostr-grants.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
