Add links to projects

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -42,7 +42,7 @@ Let's look at these projects and how they align with our
 
 ### Formstr
 
-Formstr is a decentralized, self-custodial forms application built on the nostr
+[Formstr] is a decentralized, self-custodial forms application built on the nostr
 protocol. This innovative tool offers users a self-sovereign alternative to
 mainstream platforms like Google Forms and Typeform, allowing individuals and
 organizations to manage their data without dependence on centralized services.
@@ -58,9 +58,11 @@ form interactions, and compatibility with workflow tools like Notion and Slack.
 Repository: [abhay-raizada/nostr-forms](https://github.com/abhay-raizada/nostr-forms)  
 License: MIT
 
+[Formstr]: https://formstr.app/
+
 ### Groups
 
-Groups is a chat client built on nostr. Leveraging the
+[Groups] is a chat client built on nostr. Leveraging the
 [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) standard, it
 supports relay-based group chats with advanced moderation features. Users can
 create, join, and manage groups with unique identifiers, where access is
@@ -78,9 +80,11 @@ environment​.
 Repository: [max21dev/groups](https://github.com/max21dev/groups)  
 License: MIT
 
+[Groups]: https://groups.nip29.com/
+
 ### Coop
 
-Coop is a messaging client built on nostr, designed for personal and group
+[Coop] is a messaging client built on nostr, designed for personal and group
 communication with a focus on gamers. It offers a Discord-like experience, while
 also enabling secure and simple communication through features such as group
 chats and threaded discussions with plans for voice and video calls. It
@@ -98,9 +102,11 @@ like fundraising options for group owners and interactive bots to assist users.
 Repository: [lumehq/coop](https://github.com/lumehq/coop)  
 License: GPL-3.0
 
+[Coop]: https://github.com/lumehq/coop/releases/
+
 ### Nostrability
 
-Nostrability is a documentation project aimed at understanding how various nostr
+[Nostrability] is a documentation project aimed at understanding how various nostr
 clients interact with one another. It identifies and documents inconsistencies
 and issues in client interactions, such as missing relay lists, vanished
 follows, or inconsistent note visibility. Nostrability encourages developers to
@@ -118,6 +124,8 @@ that enhance interoperability among nostr clients.
 Repository:
 [nostrability/nostrability](https://github.com/nostrability/nostrability)  
 License: MIT
+
+[Nostrability]: https://github.com/nostrability/nostrability/issues?q=sort%3Aupdated-desc+is%3Aissue+is%3Aopen+author%3Aalltheseas+label%3Apositive-interop
 
 ### NIP-44 Libraries Audit
 
