Re-word Formstr intro

--- a/data/blog/8th-wave-nostr-grants.mdx
+++ b/data/blog/8th-wave-nostr-grants.mdx
@@ -42,11 +42,11 @@ Let's look at these projects and how they align with our
 
 ### Formstr
 
-[Formstr] is a decentralized, self-custodial forms application built on the nostr
-protocol. This innovative tool offers users a self-sovereign alternative to
-mainstream platforms like Google Forms and Typeform, allowing individuals and
-organizations to manage their data without dependence on centralized services.
-By providing complete control over data collection, Formstr empowers users with
+[Formstr] is a decentralized, self-sovereign forms application built on the
+nostr protocol. It aims to offer users an alternative to mainstream platforms
+like Google Forms and Typeform, allowing individuals and organizations to manage
+their data without dependence on centralized services.  By providing more
+control over how data is used and where it is sent, Formstr empowers users with
 greater privacy and autonomy.
 
 This grant will be used to enhance Formstr's functionality, focusing on features
